apc_snmp: abandoned telnet/ssh/wexpect
While it worked for shorter lists, telnet/ssh/wexpect was unreliable and took forever to run against lists longer than a few pdu outlets.
-Reconfigured using snmp in apc_snmp.py module.
-Added progress 'periods' to indicate progress. Wayne opted wait 1 by 1 rather than have the start/stop on/off calls threaded. With the period indication it is bearable at > 100 items.

--- a/settings.yaml.TEMPLATE
+++ b/settings.yaml.TEMPLATE
@@ -15,13 +15,11 @@ pdus:
   rk3-pwr-01:
     type: apcpdu
     host: <PDU_IP>
-    username: <USERNAME>
-    pass: <PASSWORD>
+    community: <COMMUNITYSTRING>
   rk5-pwr-01:
     type: apcpdu
     host: <PDU_IP>
-    username: <USERNAME>
-    pass: <PASSWORD>
+    community: <COMMUNITYSTRING>
 
 devices: #This is where we can pair multiple objects - typically one PDU outlet and one PRTG sensor, but it can be any number of either type.
   DEVICE_1: #These are friendly names, make it something you can visually identify, it will be used for display in the interface
